Closed Bug 106479 Opened 24 years ago Closed 24 years ago

Check "Empty Trash on Exit" from account setting freeze an IMAP account without Trash folder

Categories

(MailNews Core :: Networking: IMAP, defect)

x86
All
defect
Not set
blocker

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: dewaele, Assigned: mscott)

References

Details

(Keywords: hang)

Attachments

(1 file, 1 obsolete file)

Hello, I have 3 mail account in IMAP 4 and only one have a Trash folder. If I check Empty Trash (In account preference) on exit on account with haven't a Trash Folder, on exit Mozilla is frozen !!! Sorry for my english i'am french :) Thx for mozilla it's good browser !!!
Multiple accounts -> Ninoschka. Updating the summary a little bit to specify this problem. Can you describe what kind of the multiple IMAP accounts that you have?
QA Contact: huang → nbaca
Summary: Bug with folder → Multiple IMAP accounts: Check "Empty Trash on Exit" from account setting freeze an IMAP account without Trash folder
adding keywords: hang
Keywords: hang
All of our internal IMAP interop server have trash folder unless "AOL" or "unspecify trash on other IMAP delete modes". There are existing bugs for disable empty trash on exit for other IMAP delete modes and AOL. The important thing is: How Netscape handle "Empty Trash on Exit" associate with different accounts w/ trash & wo/ trash folder......
3 accounts in IMAP. My provider is not AOL. But if i uncheck checkbox "Empty trash on exit" mozilla work. Because 2/3 account haven't Trash Folder. Resume: If i check "Empty trash on exit" and i haven't Trash Folder, mozilla freeze !
I can reproduce this with one or multiple IMAP accounts. I am currently using build 2002022308. It is as described. If there is not a trash folder on the IMAP server, and Mozilla is set to empty trash folders on exit, then Mozilla will hang and will need to be terminated forcefully.. If that option (empty trash on exit) is unchecked, Mozilla exits correctly.. Aside from this small problem, Mozilla's mail support is the best that I've found. Thanks for a great product!
*** Bug 132645 has been marked as a duplicate of this bug. ***
confirming based on comment #5 and based on dupe. os -> all
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
*** Bug 108847 has been marked as a duplicate of this bug. ***
Attached patch patch for review (obsolete) — Splinter Review
The reason for this bug is because the return value is ignored and mozilla continue to work on a wrong status.
Keywords: patch
Can anyone take a look at this bug and review, superreview the patch(attachment 78158 [details] [diff] [review])? Thanks. r= & sr= wanted
Comment on attachment 78158 [details] [diff] [review] patch for review sr=mscott Although in the future, please get a first level review before requesting a super review. There are more reviewers than sr's out there so it cuts down on the time we have to look at a bug if the first level review catches anything. thanks for the patch.
Attachment #78158 - Flags: superreview+
Thanks, mscott. There is another bug 120485 that needs your superreview. One of the bug's patch has passed r=mscott and sr=bienvenu, and you suggested me to give a check for memory allocation, then I gave the required patch again. It has passed r=bienvenu. I hope you can sr= it. The bug is about a basic function of IMAP. Thanks. Henry
Keywords: approval, review
+ return NS_OK; + } + else + { + return rv; } - return NS_OK; your patch is creating an else after return. change it so that you have: + return NS_OK; } - return NS_OK; + return rv; instead. with that, r=timeless
Attached patch revised patchSplinter Review
According to timeless' suggestion, I give the new patch. mscott, can you sr= it again? Thanks.
Attachment #78158 - Attachment is obsolete: true
Comment on attachment 79565 [details] [diff] [review] revised patch carrying over sr
Attachment #79565 - Flags: superreview+
Attachment #79565 - Flags: review+
Fix checked in
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
*** Bug 125355 has been marked as a duplicate of this bug. ***
Should we carry this over into the 1.0 branch?
Comment on attachment 79565 [details] [diff] [review] revised patch a=shaver for 1.0 branch.
Attachment #79565 - Flags: approval+
QA Contact: nbaca → huang
*** Bug 98328 has been marked as a duplicate of this bug. ***
Removing multiple accounts in the summary since problem can be reproduced in a single account as bug 98328 description. Copy/Paste comments from bug 98328 --------------------------------------------------- Comment #11 From esben@oek.dk 2001-10-02 10:39: OK, I can reproduce it now in these steps: 1) Create new profile 2) Go to mail/news, create IMAP account. 3) Change preferences to "mark as deleted" 4) Unsubscribe "Trash" folder. I disappears from view. 5) Change preferences to "move to trash" and check "delete trash on exit" 6) Exit mail/news --------------------------------------------------------------------------
Summary: Multiple IMAP accounts: Check "Empty Trash on Exit" from account setting freeze an IMAP account without Trash folder → Check "Empty Trash on Exit" from account setting freeze an IMAP account without Trash folder
Comment on attachment 79565 [details] [diff] [review] revised patch a=blizzard on behalf of drivers for 1.0
checked into the 1.0 branch.
Keywords: fixed1.0.0
*** Bug 144355 has been marked as a duplicate of this bug. ***
this was backed out of the branch last night in an attempt to fix orangeness. Please check back in asap.
as soon as the branch opens for checkins again, I'll land this back on the branch. I backed it out to see if it was causing the mail smoketests on tinderbox to go orange. It was not the cause. removing fixed1.0.0
Keywords: fixed1.0.0
adding fixed1.0.0 keyword again. this is back in the branch.
Keywords: fixed1.0.0
Verified on all the platforms, no hang or freeze anymore for comment #21 scenario. 06-13-07-1.0.0 06-13-07-1.0.0 06-13-05-1.0.0 Marking as verified and changing keywords from fixed1.0.0 (Scott, should befixed 1.0.1, right?) to verified1.0.1.
Status: RESOLVED → VERIFIED
Oops! I mean: Windows 06-13-07-1.0.0 Linux 06-13-07-1.0.0 Mac 06-13-05-1.0.0
If the Trash folder does exist, but the server can not be reached, will Mozilla still hang? Please see bug 184576.
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: