bug 106479:Multiple IMAP accounts: Check "Empty Trash on Exit" from account setting freeze an IMAP account without Trash folder. r=timeless sr=mscott Check in Henry Jia's(henry.jia@sun.com) fix